--- a/client/src/styles/Nav.module.css
+++ b/client/src/styles/Nav.module.css
@@ -1,6 +1,6 @@
 .navbar {
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     width: 100%;
     background-color: rgb(52,170,210);
     display: flex;
